--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
 		"async": "x",
 		"LarveSpeer-markdown": "git+ssh://git@github.com:LarveSpeer/LarveSpeer-markdown.git",
 		"LarveSpeer-jade": "git+ssh://git@github.com:LarveSpeer/LarveSpeer-jade.git"
+	},
+	"scripts": {
+		"test": "npm run test-install && npm run test-flow",
+		"test-install": "npm install",
+		"test-flow": "flow check"
 	}
 }
